--- a/client/app-project/src/app/component/header/header.component.html
+++ b/client/app-project/src/app/component/header/header.component.html
@@ -6,14 +6,14 @@
       <img src="../../../assets/img/logo.png" alt="">
       <span>Skyline</span>
     </a>
-
-    <nav id="navbar" class="navbar">
+<div class="container-fluid">
+    <nav id="navbar" class="navbar ">
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
         <li><a class="nav-link scrollto" href="#about">¿Quienes Somos?</a></li>
         <li><a class="nav-link scrollto" href="#services">Vuelos</a></li>
         <li><a class="nav-link scrollto" href="#team">Check-in</a></li>
-
+<!--
         <li class="dropdown"><a href="#"><span>Mantenimientos</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Tipos de aviones</a></li>
@@ -30,12 +30,15 @@
             <li><a href="#">Rutas con más ventas</a></li>
           </ul>
         </li>
+-->
         <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
-        <li><a class="getstarted scrollto" href="#about">Registrarse</a></li>
+
+        <li><a class="getstarted log scrollto" href="#about">Iniciar Sesion</a></li>
+        <li><a class="getstarted scrollto " routerLink="/register" href="#about">Registrarse</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav>
-
+  </div>
   </div>
 
 </header>
