--- a/client/app-project/src/app/component/home/home.component.html
+++ b/client/app-project/src/app/component/home/home.component.html
@@ -1,3 +1,5 @@
+
+<app-header></app-header>
 <section id="hero" class="hero d-flex align-items-center">
 
   <div class="container">
@@ -13,6 +15,7 @@
               <i class="bi bi-arrow-right"></i>
             </a>
           </div>
+
         </div>
       </div>
       <div class="col-lg-6 hero-img" data-aos="" data-aos-delay="200">
@@ -275,3 +278,4 @@
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
     class="bi bi-arrow-up-short"></i></a>
+<app-footer></app-footer>
