--- a/client/app-project/src/app/component/header/header.component.html
+++ b/client/app-project/src/app/component/header/header.component.html
@@ -33,7 +33,7 @@
 -->
         <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
 
-        <li><a class="getstarted log scrollto" href="#about">Iniciar Sesion</a></li>
+        <li><a class="getstarted log scrollto" href="/login">Iniciar Sesion</a></li>
         <li><a class="getstarted scrollto " routerLink="/register" href="#about">Registrarse</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
