--- a/client/app-project/src/app/component/register/register.component.html
+++ b/client/app-project/src/app/component/register/register.component.html
@@ -1,90 +1,71 @@
-<div class="container pt-5 register">
+<div class="container pt-2 register">
     <div class="row py-5 mt-4 align-items-center">
         <div class="pb-4 text-center">
             <h1>Crear Usuario</h1>
         </div>
         <form action="#">
-            <div class="row">
-                <!-- First Name -->
-                <div class="input-group col-lg-6 mb-4">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text bg-white px-4 border-md border-right-0">
-                            <i class="fa fa-user text-muted"></i>
-                        </span>
+            <form>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
                     </div>
-                    <input id="firstName" type="text" name="firstname" placeholder="First Name"
-                        class="form-control bg-white border-left-0 border-md">
-                </div>
-
-                <!-- Last Name -->
-                <div class="input-group col-lg-6 mb-4">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text bg-white px-4 border-md border-right-0">
-                            <i class="fa fa-user text-muted"></i>
-                        </span>
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Apellido</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
                     </div>
-                    <input id="lastName" type="text" name="lastname" placeholder="Last Name"
-                        class="form-control bg-white border-left-0 border-md">
                 </div>
-
-                <!-- Email Address -->
-                <div class="input-group col-lg-12 mb-4">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text bg-white px-4 border-md border-right-0">
-                            <i class="fa fa-envelope text-muted"></i>
-                        </span>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
                     </div>
-                    <input id="email" type="email" name="email" placeholder="Email Address"
-                        class="form-control bg-white border-left-0 border-md">
                 </div>
-
-                <!-- Phone Number -->
-                <div class="input-group col-lg-12">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text bg-white px-4 border-md border-right-0">
-                            <i class="fa fa-phone-square text-muted"></i>
-                        </span>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Direccion</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
                     </div>
-                    <input id="phoneNumber" type="tel" name="phone" placeholder="Phone Number"
-                        class="form-control bg-white border-md border-left-0 pl-3">
-                </div>.
-
-                <!-- Password -->
-                <div class="input-group col-lg-12 mb-4">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text bg-white px-4 border-md border-right-0">
-                            <i class="fa fa-lock text-muted"></i>
-                        </span>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Telefono</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
                     </div>
-                    <input id="password" type="password" name="password" placeholder="Password"
-                        class="form-control bg-white border-left-0 border-md">
                 </div>
-
-                <!-- Password Confirmation -->
-                <div class="input-group col-lg-12 mb-4">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text bg-white px-4 border-md border-right-0">
-                            <i class="fa fa-lock text-muted"></i>
-                        </span>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Fecha de Nacimiento</label>
+                            <input type="date" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
                     </div>
-                    <input id="passwordConfirmation" type="text" name="passwordConfirmation"
-                        placeholder="Confirm Password" class="form-control bg-white border-left-0 border-md">
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
+                    </div>
                 </div>
-
-                <!-- Submit Button -->
-                <div class="form-group col-lg-12 mx-auto mb-4">
-                    <a href="#" class="btn btn-primary btn-block py-2">
-                        <span class="font-weight-bold">Crear Usuario</span>
-                    </a>
-                </div>
-
-                <!-- Already Registered -->
-                <div class="text-center w-100">
-                    <p class="text-muted font-weight-bold">Ya estas registrado? <a href="#"
-                            class="text-primary ml-2">Iniciar Sesion</a></p>
-                </div>
-
-            </div>
+                <button type="submit" class="btn btn-primary mt-4">Crear Cuenta</button>
+            </form>
         </form>
     </div>
 </div>
