--- a/client/app-project/src/app/component/header/header.component.html
+++ b/client/app-project/src/app/component/header/header.component.html
@@ -15,8 +15,6 @@
           <li><a class="nav-link scrollto" href="#services">Vuelos</a></li>
           <li><a class="nav-link scrollto" href="#team">Check-in</a></li>
           <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
-          <li><a class="getstarted scrollto btn-primary ml-5" href="/login">Iniciar Sesion</a></li>
-          
           <!--
           <li class="dropdown"><a href="#"><span>Mantenimientos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -36,6 +34,7 @@
           </li>
           -->
         </ul>
+        <a class="getstarted scrollto btn-primary ml-5" href="/login">Iniciar Sesion</a>
       </nav>
     </div>
   </div>
@@ -43,7 +42,8 @@
 </header>
 
   <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
+    <div class=" p-4">
+      <nav class="navbar-responsive">
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
         <li><a class="nav-link scrollto" href="#about">¿Quienes Somos?</a></li>
@@ -52,10 +52,17 @@
         <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
         <li><a class="getstarted scrollto btn-primary ml-5" href="/login">Iniciar Sesion</a></li>
       </ul>
+    </nav>
     </div>
   </div>
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navbar navbar-light bg-light navbar-responsive">
     <div class="container-fluid">
+      <div>
+        <a href="index.html" class="navbar-responsive-logo">
+          <img src="../../../assets/img/logo.png" alt="">
+          <span>Skyline</span>
+        </a>
+      </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
