--- a/client/app-project/src/app/component/register/register.component.html
+++ b/client/app-project/src/app/component/register/register.component.html
@@ -5,30 +5,38 @@
         <div class="pb-4 text-center">
             <h1>Crear Usuario</h1>
         </div>
-        <form action="#">
-            <form>
+
+            <form [formGroup]="UserForm" (ngSubmit)="adduser()">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
+                            <input type="text" class="form-control" formControlName="name" >
+                            <div class="text-danger" *ngIf="UserForm.get('name')?.hasError('required') && UserForm.get('name')?.touched">
+                              <span>El nombre <strong>es obligatorio</strong></span>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Apellido</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1"
+                            <label for="exampleInputEmail1" class="form-label">Usuario</label>
+                            <input type="text" class="form-control" formControlName="user"  id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
+                                <div class="text-danger" *ngIf="UserForm.get('user')?.hasError('required') && UserForm.get('user')?.touched">
+                                  <span>El usuario <strong>es obligatorio</strong></span>
+                                </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
+                            <label for="exampleInputEmail1" class="form-label">E-mail</label>
+                            <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
+                                <div class="text-danger" *ngIf="UserForm.get('email')?.hasError('required') && UserForm.get('email')?.touched">
+                                  <span>El E-mail <strong>es obligatorio</strong></span>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -36,8 +44,11 @@
                     <div class="col-lg-12">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Direccion</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1"
+                            <input type="text" class="form-control" formControlName="address"  id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
+                                <div class="text-danger" *ngIf="UserForm.get('address')?.hasError('required') && UserForm.get('address')?.touched">
+                                  <span>La Direccion <strong>es obligatorio</strong></span>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -45,8 +56,11 @@
                     <div class="col-lg-12">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Telefono</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1"
+                            <input type="text" class="form-control" formControlName="mobile"  id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
+                                <div class="text-danger" *ngIf="UserForm.get('mobile')?.hasError('required') && UserForm.get('mobile')?.touched">
+                                  <span>El Telefono <strong>es obligatorio</strong></span>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -54,21 +68,27 @@
                     <div class="col-lg-6">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Fecha de Nacimiento</label>
-                            <input type="date" class="form-control" id="exampleInputEmail1"
+                            <input type="date" class="form-control" formControlName="birthdate"  id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
+                                <div class="text-danger" *ngIf="UserForm.get('birthdate')?.hasError('required') && UserForm.get('birthdate')?.touched">
+                                  <span>La Fecha de Nacimiento <strong>es obligatorio</strong></span>
+                                </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="exampleInputEmail1"
+                            <input type="password" class="form-control" formControlName="password"  id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
+                                <div class="text-danger" *ngIf="UserForm.get('password')?.hasError('required') && UserForm.get('password')?.touched">
+                                  <span>La Contraseña <strong>es obligatorio</strong></span>
+                                </div>
                         </div>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary mt-4">Crear Cuenta</button>
             </form>
-        </form>
+
     </div>
 </div>
 <app-footer></app-footer>
