--- a/client/app-project/src/app/component/header/header.component.html
+++ b/client/app-project/src/app/component/header/header.component.html
@@ -13,7 +13,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
           <li><a class="nav-link scrollto" href="#about">¿Quienes Somos?</a></li>
           <li><a class="nav-link scrollto" href="#services">Vuelos</a></li>
-          <li><a class="nav-link scrollto" href="#team">Check-in</a></li>
+          <li><a class="nav-link scrollto" href="/check-in">Check-in</a></li>
           <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
           <!--
           <li class="dropdown"><a href="#"><span>Mantenimientos</span> <i class="bi bi-chevron-down"></i></a>
@@ -48,7 +48,7 @@
         <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
         <li><a class="nav-link scrollto" href="#about">¿Quienes Somos?</a></li>
         <li><a class="nav-link scrollto" href="#services">Vuelos</a></li>
-        <li><a class="nav-link scrollto" href="#team">Check-in</a></li>
+        <li><a class="nav-link" href="/check-in">Check-in</a></li>
         <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
         <li><a class="getstarted scrollto btn-primary ml-5" href="/login">Iniciar Sesion</a></li>
       </ul>
