--- a/client/app-project/src/app/component/flight-management/flight-management.component.html
+++ b/client/app-project/src/app/component/flight-management/flight-management.component.html
@@ -20,10 +20,8 @@
                     <div class="col-lg-12">
                         <label class="form-label">Tipo de Avion</label>
                         <select class="form-select" aria-label="Default select example">
-                            <option selected>--</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option>--</option>
+                            <option *ngFor="let x of tiposAviones" [value]="x.identificador">{{ x.modelo }} Año: {{ x.anio }}</option>
                         </select>
                     </div>
                 </div>
@@ -48,25 +46,21 @@
         </form>
     </div>
     <div>
-    <table class="table">
-        <thead class="table-light">
-            <tr>
-                <th scope="col">Ruta</th>
-                <th scope="col">Tipo Avion</th>
-                <th scope="col">Dia</th>
-                <th scope="col">Hora</th>
-                <th scope="col">Opciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>mdo</td>
-                <td>Jacob</td>
-                <td>Thornton</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+        <table class="table">
+            <thead class="table-light">
+                <tr>
+                    <th scope="col">Ruta</th>
+                    <th scope="col">Tipo Avion</th>
+                    <th scope="col">Dia</th>
+                    <th scope="col">Hora</th>
+                    <th scope="col">Opciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let x of tiposAviones">
+                    <td>{{ x.marca }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
