--- a/client/app-project/src/app/component/flight-management/flight-management.component.html
+++ b/client/app-project/src/app/component/flight-management/flight-management.component.html
@@ -14,6 +14,10 @@
                             <option value="2">Two</option>
                             <option value="3">Three</option>
                         </select>
+                        <!--<select class="form-select" aria-label="Default select example">
+                            <option>--</option>
+                            <option *ngFor="let x of rutas" [value]="x.identificador">{{x.origen}} - {{x.destino}}</option>
+                        </select>-->
                     </div>
                 </div>
                 <div class="row mb-3">
