--- a/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
@@ -3,23 +3,20 @@
         <div class="pb-4 text-center">
             <h1>Mantenimiento Vuelos</h1>
         </div>
-        <form #vueloForm="ngForm" (ngSubmit)="addVuelo(vueloForm)">
+        <form [formGroup]="postForm" (ngSubmit)="submitForm()">
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Ruta</label>
-                    <select class="form-select" name="ruta" [(ngModel)]="vuelo.ruta">
-                        <option>--</option>
-                        <option *ngFor="let x of rutas" [value]="x._id">{{x.origen}} - {{x.destino}}</option>
+                    <select class="form-select" name="ruta" formControlName="ruta">
+                        <option *ngFor="let x of rutas" [ngValue]="x">{{x.origen}} - {{x.destino}}</option>
                     </select>
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Tipo de Avion</label>
-                    <select class="form-select" name="tipoAvion" [(ngModel)]="vuelo.tipoAvion">
-                        <option>--</option>
-                        <option *ngFor="let x of tiposAviones" [value]="x._id">{{ x.modelo }} Año: {{ x.anio
-                            }}</option>
+                    <select class="form-select" name="tipoAvion" formControlName="tipoAvion">
+                        <option *ngFor="let x of tiposAviones" [value]="x._id">{{ x.modelo }} Año: {{ x.anio }}</option>
                     </select>
                 </div>
             </div>
@@ -27,17 +24,17 @@
                 <div class="col-lg-6">
                     <div class="mb-3">
                         <label class="form-label">Dia</label>
-                        <input type="date" class="form-control" name="dia" [(ngModel)]="vuelo.dia">
+                        <input type="date" class="form-control" name="dia" formControlName="dia">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="mb-3">
                         <label class="form-label">Hora</label>
-                        <input type="time" class="form-control" name="hora" [(ngModel)]="vuelo.hora">
+                        <input type="time" class="form-control" name="hora" formControlName="hora">
                     </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary mt-4">Crear Vuelo</button>
+            <button type="submit" class="btn btn-primary mt-4">Guardar Vuelo</button>
         </form>
     </div>
 </div>
