--- a/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
@@ -8,7 +8,7 @@
                 <div class="col-lg-12">
                     <label class="form-label">Ruta</label>
                     <select class="form-select" name="ruta" formControlName="ruta">
-                        <option *ngFor="let x of rutas" [ngValue]="x">{{x.origen}} - {{x.destino}}</option>
+                        <option *ngFor="let x of rutas" [ngValue]="x._id">{{x.origen}} - {{x.destino}}</option>
                     </select>
                 </div>
             </div>
@@ -16,7 +16,7 @@
                 <div class="col-lg-12">
                     <label class="form-label">Tipo de Avion</label>
                     <select class="form-select" name="tipoAvion" formControlName="tipoAvion">
-                        <option *ngFor="let x of tiposAviones" [value]="x._id">{{ x.modelo }} Año: {{ x.anio }}</option>
+                        <option *ngFor="let x of tiposAviones" [ngValue]="x._id">{{ x.modelo }} Año: {{ x.anio }}</option>
                     </select>
                 </div>
             </div>
