--- a/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
@@ -1,40 +1,34 @@
-<div class="container pt-2 register pb-5">
-    <div class="row py-5 mt-4 align-items-center">
-        <div class="pb-4 text-center">
-            <h1>Mantenimiento Vuelos</h1>
+<h4 class="pb-2 text-center">Formulario Vuelo</h4>
+<form [formGroup]="postForm" (ngSubmit)="submitForm()">
+    <div class="row mb-3">
+        <div class="col-lg-12">
+            <label class="form-label">Ruta</label>
+            <select class="form-select" name="ruta" formControlName="ruta">
+                <option *ngFor="let x of rutas" [ngValue]="x._id">{{x.origen}} - {{x.destino}}</option>
+            </select>
         </div>
-        <form [formGroup]="postForm" (ngSubmit)="submitForm()">
-            <div class="row mb-3">
-                <div class="col-lg-12">
-                    <label class="form-label">Ruta</label>
-                    <select class="form-select" name="ruta" formControlName="ruta">
-                        <option *ngFor="let x of rutas" [ngValue]="x._id">{{x.origen}} - {{x.destino}}</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-lg-12">
-                    <label class="form-label">Tipo de Avion</label>
-                    <select class="form-select" name="tipoAvion" formControlName="tipoAvion">
-                        <option *ngFor="let x of tiposAviones" [ngValue]="x._id">{{ x.modelo }} Año: {{ x.anio }}</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="mb-3">
-                        <label class="form-label">Dia</label>
-                        <input type="date" class="form-control" name="dia" formControlName="dia">
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="mb-3">
-                        <label class="form-label">Hora</label>
-                        <input type="time" class="form-control" name="hora" formControlName="hora">
-                    </div>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary mt-4">Guardar Vuelo</button>
-        </form>
     </div>
-</div>
+    <div class="row mb-3">
+        <div class="col-lg-12">
+            <label class="form-label">Tipo de Avion</label>
+            <select class="form-select" name="tipoAvion" formControlName="tipoAvion">
+                <option *ngFor="let x of tiposAviones" [ngValue]="x._id">{{ x.modelo }} Año: {{ x.anio }}</option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="mb-3">
+                <label class="form-label">Dia</label>
+                <input type="date" class="form-control" name="dia" formControlName="dia">
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="mb-3">
+                <label class="form-label">Hora</label>
+                <input type="time" class="form-control" name="hora" formControlName="hora">
+            </div>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary mt-4">Guardar</button>
+</form>
