--- a/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
@@ -1,26 +1,34 @@
-<button class="btn btn-primary mb-3">Crear nuevo</button>
-<table class="table">
-    <thead class="table-light">
-        <tr>
-            <th scope="col">Ruta</th>
-            <th scope="col">Tipo Avion</th>
-            <th scope="col">Dia</th>
-            <th scope="col">Hora</th>
-            <th scope="col">Hora llegada</th>
-            <th scope="col">Opciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let x of vuelos">
-            <td>{{ x.ruta.origen }} - {{ x.ruta.destino }}</td>
-            <td>{{ x.tipoAvion.modelo }} Año: {{ x.tipoAvion.anio }}</td>
-            <td>{{ x.dia }}</td>
-            <td>{{ x.hora }}</td>
-            <td>{{ x.horaLlegada }}</td>
-            <td>
-                <button class="btn btn-secondary d-inline-block m-1" routerLink="/vuelo/{{x._id}}"><i class="fas fa-pen"></i></button>
-                <button class="btn btn-danger d-inline-block m-1" (click)="deleteVuelo(x._id)"><i class="far fa-trash-alt"></i></button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<button class="btn btn-primary mb-3">Crear nuevo vuelo</button>
+<div class="card">
+    <div class="card-body">
+        <div class="table-responsive">
+        <table class="table table-hover">
+            <thead class="table-white">
+                <tr>
+                    <th scope="col">Ruta</th>
+                    <th scope="col">Tipo Avion</th>
+                    <th scope="col">Dia</th>
+                    <th scope="col">Hora</th>
+                    <th scope="col">Hora llegada</th>
+                    <th scope="col">Opciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let x of vuelos">
+                    <td>{{ x.ruta.origen }} - {{ x.ruta.destino }}</td>
+                    <td>{{ x.tipoAvion.modelo }} Año: {{ x.tipoAvion.anio }}</td>
+                    <td>{{ x.dia }}</td>
+                    <td>{{ x.hora }}</td>
+                    <td>{{ x.horaLlegada }}</td>
+                    <td>
+                        <button class="btn btn-secondary d-inline-block m-1" routerLink="/vuelo/{{x._id}}"><i
+                                class="fas fa-pen"></i></button>
+                        <button class="btn btn-danger d-inline-block m-1" (click)="deleteVuelo(x._id)"><i
+                                class="far fa-trash-alt"></i></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    </div>
+</div>
