--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -9,7 +9,8 @@
         <br>
 
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboard">
-            <div class="sidebar-brand-text mx-3">Administrador Skyline</div>
+            <i class="fas fa-users-cog"></i>
+            <div class="sidebar-brand-text ml-1">Skyline Admin</div>
         </a>
 
         <br>
@@ -28,7 +29,8 @@
 
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
-                <span>Vuelos</span>
+                <i class="fas fa-plane"></i>                
+                <span> Vuelos</span>
             </a>
 
             <div id="collapseOne" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -40,7 +42,8 @@
 
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                 aria-expanded="true" aria-controls="collapseTwo">
-                <span>Reservaciones</span>
+                <i class="far fa-calendar-alt"></i>
+                <span> Reservaciones</span>
             </a>
             
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
