--- a/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
@@ -6,9 +6,14 @@
         <div class="row mb-3">
             <div class="col-lg-12">
                 <label class="form-label">Ruta</label>
-                <select class="form-select" name="ruta" formControlName="ruta">
-                    <option *ngFor="let x of rutas" [ngValue]="x._id">{{x.origen}} - {{x.destino}}</option>
-                </select>
+                <div *ngIf="editMode; else notEditMode">
+                    <input type="text" readonly class="form-control" name="ruta" formControlName="ruta">
+                </div>
+                <ng-template #notEditMode>
+                    <select class="form-select" name="ruta" formControlName="ruta">
+                        <option *ngFor="let x of rutas" [ngValue]="x._id">{{x.origen}} - {{x.destino}}</option>
+                    </select>
+                </ng-template>
             </div>
         </div>
         <div class="row mb-3">
