--- a/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
@@ -21,10 +21,10 @@
                     <td>{{ x.hora }}</td>
                     <td>{{ x.horaLlegada }}</td>
                     <td>
-                        <button class="btn btn-secondary d-inline-block m-1" routerLink="/vuelo/{{x._id}}"><i
-                                class="fas fa-pen"></i></button>
-                        <button class="btn btn-danger d-inline-block m-1" (click)="deleteVuelo(x._id)"><i
-                                class="far fa-trash-alt"></i></button>
+                        <a type="button" class="btn btn-secondary d-inline-block m-1" href="/dashboard/management/flight/{{x._id}}"><i
+                                class="fas fa-pen"></i></a>
+                        <a type="button" class="btn btn-danger d-inline-block m-1" (click)="deleteVuelo(x._id)"><i
+                                class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
             </tbody>
