--- a/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
@@ -1,4 +1,8 @@
-<button class="btn btn-primary mb-3">Crear nuevo vuelo</button>
+<a class="btn btn-primary mb-3" href="/dashboard/management/flight/form">
+    <i class="fas fa-plus d-inline-block m-1"></i>
+    Crear Nuevo
+</a>
+
 <div class="card">
     <div class="card-body">
         <div class="table-responsive">
