--- a/client/app-project/src/styles.css
+++ b/client/app-project/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+:is(input,textarea).ng-invalid{
+    border-left: 5px solid red;
+    }
+:is(input,textarea).ng-valid{
+    border-left: 5px solid green;
+}
