--- a/client/app-project/src/app/component/managements/reserva/reserva-form/reserva-form.component.html
+++ b/client/app-project/src/app/component/managements/reserva/reserva-form/reserva-form.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<!--<div class="card">
     <div class="card-body">
       <h5 class="card-title">Formulario Reservaciones</h5>
       <hr>
@@ -42,3 +42,4 @@
     </form>
     </div>
   </div>
+-->
