--- a/client/app-project/src/app/component/managements/reserva/reserva-list/reserva-list.component.html
+++ b/client/app-project/src/app/component/managements/reserva/reserva-list/reserva-list.component.html
@@ -1,4 +1,4 @@
-<a class="btn btn-primary mb-3" href="/dashboard/management/reservation/form">
+<!--<a class="btn btn-primary mb-3" href="/dashboard/management/reservation/form">
     <i class="fas fa-plus d-inline-block m-1"></i>
     Crear Nuevo
 </a>
@@ -38,4 +38,4 @@
         </table>
     </div>
     </div>
-</div>
+</div>-->
