Avance 5 amanda LISTO!!

--- a/client/app-project/src/app/component/managements/tipoavion/tipoavion-list/tipoavion-list.component.html
+++ b/client/app-project/src/app/component/managements/tipoavion/tipoavion-list/tipoavion-list.component.html
@@ -42,7 +42,7 @@
  -->
 
  <div>
-    <table class="table">
+    <table class="table"  *ngIf="tipoavion.length">
         <thead class="table-light">
             <tr>
                 <th scope="col">Identificador</th>
@@ -57,7 +57,7 @@
         <tbody>
 
             
-            <tr *ngFor="let x of tipoavion">
+        <tr *ngFor="let x of tipoavion">
                 <td>{{ x.identificador }}</td>
                 <td>{{ x.modelo }}</td>
                 <td>{{ x.marca }}</td>
@@ -66,8 +66,8 @@
                 <td>{{ x.cant_filas }}</td>
                 <td>{{ x.cant_asientosfila }}</td>
                 <td>
-                    <!-- <button class="btn btn-secondary d-inline-block m-1" routerLink="/tipoavion/{{x._id}}"><i
-                            class="fas fa-pen"></i></button> -->
+                    <button class="btn btn-secondary d-inline-block m-1" routerLink="/tipoavion/{{x._id}}"><i
+                            class="fas fa-pen"></i></button> 
                     <button class="btn btn-danger d-inline-block m-1" (click)="deleteTipoAvion(x._id)"><i
                             class="far fa-trash-alt"></i></button>
                 </td>
