--- a/client/app-project/src/app/component/managements/tipoavion/tipoavion-form/tipoavion-form.component.html
+++ b/client/app-project/src/app/component/managements/tipoavion/tipoavion-form/tipoavion-form.component.html
@@ -7,49 +7,43 @@
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Identificador</label>
-                    <input formControlName="title" type="text" class="form-control" aria-describedby="emailHelp">
+                    <input formControlName="identificador" type="text" class="form-control" aria-describedby="emailHelp">
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Modelo</label>
-                    <textarea formControlName="body" class="form-control" aria-describedby="emailHelp"></textarea>
+                    <textarea formControlName="modelo" class="form-control" aria-describedby="emailHelp"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Marca</label>
-                    <input formControlName="title" type="text" class="form-control" aria-describedby="emailHelp">
+                    <input formControlName="marca" type="text" class="form-control" aria-describedby="emailHelp">
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Año</label>
-                    <textarea formControlName="body" class="form-control" aria-describedby="emailHelp"></textarea>
+                    <textarea formControlName="anio" class="form-control" aria-describedby="emailHelp"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Cantidad de Pasajeros</label>
-                    <textarea formControlName="body" class="form-control" aria-describedby="emailHelp"></textarea>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-lg-12">
-                    <label class="form-label">Cantidad de Asientos</label>
-                    <textarea formControlName="body" class="form-control" aria-describedby="emailHelp"></textarea>
+                    <textarea formControlName="cant_pasajeros" class="form-control" aria-describedby="emailHelp"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Cantidad de Filas</label>
-                    <textarea formControlName="body" class="form-control" aria-describedby="emailHelp"></textarea>
+                    <textarea formControlName="cant_filas" class="form-control" aria-describedby="emailHelp"></textarea>
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="col-lg-12">
                     <label class="form-label">Cantidad de Asientos por Fila</label>
-                    <textarea formControlName="body" class="form-control" aria-describedby="emailHelp"></textarea>
+                    <textarea formControlName="cant_asientosfila" class="form-control" aria-describedby="emailHelp"></textarea>
                 </div>
             </div>
             <button type="submit" class="btn btn-primary mt-4">Guardar</button>
@@ -57,40 +51,3 @@
     </div>
 </div>
 
-
-
-<!--  Profe. Mantenimientos:
-    
-    <div class="mt-5">
-    <form [formGroup]="postForm" (ngSubmit)="submitForm()">
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Identificador</label>
-            <input formControlName="identificador" type="text" class="form-control" aria-describedby="emailHelp">
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Modelo</label>
-            <textarea formControlName="modelo" class="form-control" aria-describedby="emailHelp"></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Marca</label>
-            <textarea formControlName="marca" class="form-control" aria-describedby="emailHelp"></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Año</label>
-            <textarea formControlName="anio" class="form-control" aria-describedby="emailHelp"></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Cantidad Pasajeros</label>
-            <textarea formControlName="cant_pasajeros" class="form-control" aria-describedby="emailHelp"></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Cantidad de filas</label>
-            <textarea formControlName="cant_filas" class="form-control" aria-describedby="emailHelp"></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Cantidad de asientos por fila</label>
-            <textarea formControlName="cant_asientosfila" class="form-control" aria-describedby="emailHelp"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Guardar</button>
-    </form>
-</div> -->
