--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -35,21 +35,21 @@
 
             <div id="collapseOne" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="dashboard/management/flight/form">Crear vuelo</a>
-                    <a class="collapse-item" href="dashboard/management/flight/list">Lista de vuelos</a>
+                    <a class="collapse-item" href="dashboard/management/flight/form">Crear Vuelo</a>
+                    <a class="collapse-item" href="dashboard/management/flight/list">Lista de Vuelos</a>
                 </div>
             </div>
 
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                 aria-expanded="true" aria-controls="collapseTwo">
                 <i class="far fa-calendar-alt"></i>
-                <span> Reservaciones</span>
+                <span> Tipos de Aviones</span>
             </a>
             
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="dashboard/management/reservation/form">Crear reservacion</a>
-                    <a class="collapse-item" href="dashboard/management/reservation/list">Lista de reservaciones</a>
+                    <a class="collapse-item" href="dashboard/management/tipoavion/form">Crear Avion</a>
+                    <a class="collapse-item" href="dashboard/management/tipoavion/list">Lista de Aviones</a>
                 </div>
             </div>
 
