--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -33,7 +33,7 @@
                 <span> Vuelos</span>
             </a>
 
-            <div id="collapseOne" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+            <div id="collapseOne" class="collapse" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="dashboard/management/flight/form">Crear Vuelo</a>
                     <a class="collapse-item" href="dashboard/management/flight/list">Lista de Vuelos</a>
@@ -41,15 +41,28 @@
             </div>
 
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                aria-expanded="true" aria-controls="collapseTwo">
+                aria-expanded="true">
                 <i class="far fa-calendar-alt"></i>
                 <span> Tipos de Aviones</span>
             </a>
             
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+            <div id="collapseTwo" class="collapse" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="dashboard/management/tipoavion/form">Crear Avion</a>
                     <a class="collapse-item" href="dashboard/management/tipoavion/list">Lista de Aviones</a>
+                </div>
+            </div>
+
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree"
+                aria-expanded="true">
+                <i class="far fa-calendar-alt"></i>
+                <span>Rutas</span>
+            </a>
+            
+            <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="dashboard/management/ruta/form">Crear Ruta</a>
+                    <a class="collapse-item" href="dashboard/management/ruta/list">Lista de Rutas</a>
                 </div>
             </div>
 
