--- a/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
@@ -1,4 +1,4 @@
-<a class="btn btn-primary mb-3" href="/dashboard/management/flight/form">
+<a class="btn btn-primary mb-3" href="/dashboard/vuelo/form">
     <i class="fas fa-plus d-inline-block m-1"></i>
     Crear Nuevo
 </a>
@@ -26,7 +26,7 @@
                         <td>{{ x.horaLlegada }}</td>
                         <td>
                             <a type="button" class="btn btn-secondary d-inline-block m-1"
-                                href="/dashboard/management/flight/{{x._id}}"><i class="fas fa-pen"></i></a>
+                                href="/dashboard/vuelo/{{x._id}}"><i class="fas fa-pen"></i></a>
                             <a type="button" class="btn btn-danger d-inline-block m-1" (click)="deleteVuelo(x._id)"><i
                                     class="far fa-trash-alt"></i></a>
                         </td>
