--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -35,8 +35,8 @@
 
             <div id="collapseOne" class="collapse" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="dashboard/management/flight/form">Crear Vuelo</a>
-                    <a class="collapse-item" href="dashboard/management/flight/list">Lista de Vuelos</a>
+                    <a class="collapse-item" href="dashboard/vuelo/form">Crear Vuelo</a>
+                    <a class="collapse-item" href="dashboard/vuelo/list">Lista de Vuelos</a>
                 </div>
             </div>
 
@@ -48,8 +48,8 @@
             
             <div id="collapseTwo" class="collapse" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="dashboard/management/tipoavion/form">Crear Avion</a>
-                    <a class="collapse-item" href="dashboard/management/tipoavion/list">Lista de Aviones</a>
+                    <a class="collapse-item" href="dashboard/tipoavion/form">Crear Avion</a>
+                    <a class="collapse-item" href="dashboard/tipoavion/list">Lista de Aviones</a>
                 </div>
             </div>
 
@@ -61,8 +61,8 @@
             
             <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="dashboard/management/ruta/form">Crear Ruta</a>
-                    <a class="collapse-item" href="dashboard/management/ruta/list">Lista de Rutas</a>
+                    <a class="collapse-item" href="dashboard/ruta/form">Crear Ruta</a>
+                    <a class="collapse-item" href="dashboard/ruta/list">Lista de Rutas</a>
                 </div>
             </div>
 
