--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -65,6 +65,19 @@
                 </div>
             </div>
 
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree"
+            aria-expanded="true" aria-controls="collapseTwo">
+            <i class="far fa-calendar-alt"></i>
+            <span> Compras</span>
+        </a>
+
+        <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <a class="collapse-item" href="dashboard/management/compra/form">Crear Compra</a>
+                <a class="collapse-item" href="dashboard/management/compra/list">Lista de Compras</a>
+            </div>
+        </div>
+
         </li>
 
     </ul>
