--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -28,7 +28,7 @@
         <li class="nav-item">
           <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseZero"
           aria-expanded="true" aria-controls="collapseOne">
-          <i class="fas fa-plane"></i>
+          <i class="fas fa-user"></i>
           <span> Usuarios</span>
       </a>
 
@@ -54,7 +54,7 @@
 
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                 aria-expanded="true">
-                <i class="far fa-calendar-alt"></i>
+                <i class="fas fa-sliders-h"></i>
                 <span> Tipos de Aviones</span>
             </a>
 
@@ -67,7 +67,7 @@
 
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree"
             aria-expanded="true" aria-controls="collapseTwo">
-            <i class="far fa-calendar-alt"></i>
+            <i class="fas fa-shopping-bag"></i>
             <span> Compras</span>
         </a>
 
@@ -80,8 +80,8 @@
 
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseFour"
                 aria-expanded="true">
-                <i class="far fa-calendar-alt"></i>
-                <span>Rutas</span>
+                <i class="fas fa-globe-americas"></i>
+                <span> Rutas</span>
             </a>
 
             <div id="collapseFour" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
