--- a/client/app-project/src/app/component/results/results.component.css
+++ b/client/app-project/src/app/component/results/results.component.css
@@ -10,3 +10,12 @@
 .msgSinVuelos p{
     font-size: 1.6rem;
 }
+
+.titulo{
+    font-size: 1.2rem;
+    margin-left: 0.2rem;
+}
+
+input[type="checkbox"] {
+    margin-left: 2rem !important;
+}
