--- a/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-form/vuelo-form.component.html
@@ -25,16 +25,22 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-4">
                 <div class="mb-3">
                     <label class="form-label">Dia</label>
                     <input type="date" class="form-control" name="dia" formControlName="dia">
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-4">
                 <div class="mb-3">
                     <label class="form-label">Hora</label>
                     <input type="time" class="form-control" name="hora" formControlName="hora">
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="mb-3">
+                    <label class="form-label">Precio ($)</label>
+                    <input type="number" class="form-control" name="precio" formControlName="precio" min="50">
                 </div>
             </div>
         </div>
