--- a/client/app-project/src/app/component/results/results.component.html
+++ b/client/app-project/src/app/component/results/results.component.html
@@ -40,7 +40,7 @@
                                                 <td>{{ x.dia }}</td>
                                                 <td>{{ x.hora }}</td>
                                                 <td>{{ x.horaLlegada }}</td>
-                                                <td>2000</td>
+                                                <td>${{ x.precio }}</td>
                                             </tr>
                                         </tbody>
                                     </table>
