--- a/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
+++ b/client/app-project/src/app/component/managements/vuelo/vuelo-list/vuelo-list.component.html
@@ -14,6 +14,7 @@
                         <th scope="col">Dia</th>
                         <th scope="col">Hora</th>
                         <th scope="col">Hora llegada</th>
+                        <th scope="col">Precio</th>
                         <th scope="col">Opciones</th>
                     </tr>
                 </thead>
@@ -24,6 +25,7 @@
                         <td>{{ x.dia }}</td>
                         <td>{{ x.hora }}</td>
                         <td>{{ x.horaLlegada }}</td>
+                        <td>${{ x.precio }}</td>
                         <td>
                             <a type="button" class="btn btn-secondary d-inline-block m-1"
                                 href="/dashboard/vuelo/{{x._id}}"><i class="fas fa-pen"></i></a>
