--- a/client/app-project/src/app/component/managements/compra/compra-list/compra-list.component.html
+++ b/client/app-project/src/app/component/managements/compra/compra-list/compra-list.component.html
@@ -1,4 +1,4 @@
-<a class="btn btn-primary mb-3" href="/dashboard/management/compra/form">
+<a class="btn btn-primary mb-3" href="/dashboard/compra/form">
   <i class="fas fa-plus d-inline-block m-1"></i>
   Crear Nuevo
 </a>
@@ -29,7 +29,7 @@
 
                       <td>
                           <a type="button" class="btn btn-secondary d-inline-block m-1"
-                              href="/dashboard/management/compra/{{x._id}}"><i class="fas fa-pen"></i></a>
+                              href="/dashboard/compra/{{x._id}}"><i class="fas fa-pen"></i></a>
                           <a type="button" class="btn btn-danger d-inline-block m-1" ><i
                                   class="far fa-trash-alt" (click)="delete(x._id)"></i></a>
                       </td>
