--- a/client/app-project/src/app/component/header/header.component.html
+++ b/client/app-project/src/app/component/header/header.component.html
@@ -15,6 +15,7 @@
           <li><a class="nav-link scrollto" href="#services">Vuelos</a></li>
           <li><a class="nav-link scrollto" href="/check-in">Check-in</a></li>
           <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
+          <li><a class="nav-link scrollto" href="/payment">Pago</a></li>
           <!--
           <li class="dropdown"><a href="#"><span>Mantenimientos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
