--- a/client/app-project/src/app/component/header/header.component.css
+++ b/client/app-project/src/app/component/header/header.component.css
@@ -32,3 +32,7 @@
 li a{
   cursor: pointer;
 }
+
+.navbar-responsive[_ngcontent-scp-c54] ul[_ngcontent-scp-c54] li[_ngcontent-scp-c54]:last-child {
+  padding: 0 !important;
+}
