--- a/client/app-project/src/app/component/home/home.component.html
+++ b/client/app-project/src/app/component/home/home.component.html
@@ -9,7 +9,7 @@
         <h2 data-aos="" data-aos-delay="400">Somos una compañia con más de 20 años de experiencia.</h2>
         <div data-aos="" data-aos-delay="600">
           <div class="text-center text-lg-start">
-            <a href="#about"
+            <a href="/register"
               class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
               <span>Registrarse</span>
               <i class="bi bi-arrow-right"></i>
@@ -150,9 +150,9 @@
         <p>Contáctenos</p>
       </header>
 
-      <div class="row gy-4">
+      <div class="row gy-4 text-center">
 
-        <div class="col-lg-6">
+        <div class="col-lg-12">
 
           <div class="row gy-4">
             <div class="col-md-6">
@@ -183,39 +183,10 @@
                 <i class="bi bi-clock"></i>
                 <h3>Horario</h3>
                 <p>Lunes - Viernes<br>7:00AM - 09:00PM</p>
+                <br>
               </div>
             </div>
           </div>
-
-        </div>
-
-        <div class="col-lg-6">
-          <form action="forms/contact.php" method="post" class="php-email-form">
-            <div class="row gy-4">
-
-              <div class="col-md-6">
-                <input type="text" name="name" class="form-control" placeholder="Tu Nombre" required>
-              </div>
-
-              <div class="col-md-6 ">
-                <input type="email" class="form-control" name="email" placeholder="Tu Correo" required>
-              </div>
-
-              <div class="col-md-12">
-                <input type="text" class="form-control" name="subject" placeholder="Asunto" required>
-              </div>
-
-              <div class="col-md-12">
-                <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required></textarea>
-              </div>
-
-              <div class="col-md-12 text-center">
-                <button type="submit">Enviar Mensaje</button>
-              </div>
-
-            </div>
-          </form>
-
         </div>
 
       </div>
