--- a/client/app-project/src/app/component/register/register.component.html
+++ b/client/app-project/src/app/component/register/register.component.html
@@ -35,7 +35,7 @@
                             <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
                                 <div class="text-danger" *ngIf="UserForm.get('email')?.hasError('required') && UserForm.get('email')?.touched">
-                                  <span>El E-mail <strong>es obligatorio</strong></span>
+                                  <span>El mail<strong>es obligatorio</strong></span>
                                 </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                             <input type="text" class="form-control" formControlName="address"  id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
                                 <div class="text-danger" *ngIf="UserForm.get('address')?.hasError('required') && UserForm.get('address')?.touched">
-                                  <span>La Direccion <strong>es obligatorio</strong></span>
+                                  <span>La Direccion <strong>es obligatoria</strong></span>
                                 </div>
                         </div>
                     </div>
@@ -56,10 +56,10 @@
                     <div class="col-lg-12">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Telefono</label>
-                            <input type="text" class="form-control" formControlName="mobile"  id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
+                            <input type="number" class="form-control" formControlName="mobile"  id="exampleInputEmail1"
+                                aria-describedby="emailHelp" min="0">
                                 <div class="text-danger" *ngIf="UserForm.get('mobile')?.hasError('required') && UserForm.get('mobile')?.touched">
-                                  <span>El Telefono <strong>es obligatorio</strong></span>
+                                  <span>El telefono <strong>es obligatorio</strong></span>
                                 </div>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                             <input type="date" class="form-control" formControlName="birthdate"  id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
                                 <div class="text-danger" *ngIf="UserForm.get('birthdate')?.hasError('required') && UserForm.get('birthdate')?.touched">
-                                  <span>La Fecha de Nacimiento <strong>es obligatorio</strong></span>
+                                  <span>La fecha de nacimiento <strong>es obligatoria</strong></span>
                                 </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                             <input type="password" class="form-control" formControlName="password"  id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
                                 <div class="text-danger" *ngIf="UserForm.get('password')?.hasError('required') && UserForm.get('password')?.touched">
-                                  <span>La Contraseña <strong>es obligatorio</strong></span>
+                                  <span>La Contraseña <strong>es obligatoria</strong></span>
                                 </div>
                         </div>
                     </div>
